Address review feedback and align test suite